--- a/src/main/resources/dbconfig.properties
+++ b/src/main/resources/dbconfig.properties
@@ -2,7 +2,8 @@
 url:jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=utf8&characterSetResults=utf8&allowMultiQueries=true 
 driverClassName:com.mysql.jdbc.Driver
 username:root
-password:123456
+#password:123456
+password:admin
 filters:stat
 maxActive:20
 initialSize:1
